2007-08-21  Marek Safar <marek.safar@gmail.com>

	* AOrderedEnumerable: New abstract base.
	
	* Enumerable.cs, Queryable.cs: Public methods update.
	
	* InternalOrderedSequence.cs: Fixed ThenBy.

2007-08-21  Marek Safar <marek.safar@gmail.com>

	* Enumerable.cs, Queryable.cs: Public methods update.
	
	* InternalOrderedSequence.cs, OrderedSequence.cs: Derives from
	IOrderedEnumerable<TElement>.
	
2007-08-17  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* Enumerable.cs: Fix Aggregate's counting code, and make it more 
	  efficient.

2007-06-08  Marek Safar <marek.safar@gmail.com>

	* Enumerable.cs: Fixed recursion in GroupBy.

2007-03-24  Antonello Provenzano  <antonello@deveel.com>

	* Enumerable.cs: Migrated from QueryExpression
		- Implemented overload of method Aggregate
		- Method AsEnumerable implemented
		- Method Contains overloaded
		- 'Distinct' method refactored and overloaded
		- 'Except' method refactored and overloaded
		- Method IndexOf overloaded to be used with IEqualityComparer instances
		- Method Join overloaded to be used with IEqualityComparer instances
		- Method GroupJoin overloaded to be used with IEqualityComparer instances
		- Implemented internal method ToReadOnlyCollection for support
		to expressions.
		
2007-02-16  Marek Safar <marek.safar@gmail.com>

	* Enumerable.cs, Queryable.cs: Remove Extension attribute.

2007-02-03  Atsushi Enomoto  <atsushi@ximian.com>

	* IQueryable_T.cs : fixed type/member signatures (generic arguments).

2007-01-19  Marek Safar <marek.safar@gmail.com>

	* QueryExpression.cs,
	* Enumerable.cs: New files.

	* Small update to recent version.

2007-01-19  Marek Safar <marek.safar@gmail.com>

	* ChangeLog: Added
	