@@ -1,3 +1,7 @@
+2007-08-22  Marek Safar <marek.safar@gmail.com>
+
+	* Enumerable.cs: More SelectionMany.
+
 2007-08-21  Marek Safar <marek.safar@gmail.com>
 
 	* AOrderedEnumerable: New abstract base.
